--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,12 +7,13 @@
         <% end %>
     </ol>
 <% end %>
+
 <%= form_for @user do |f| %>
     <%= f.label :email %>
     <%= f.email_field :email %>
     <%= f.label :password %>
     <%= f.password_field :password %>
-    <%= f.label :password_confirmation %>
+    <%= f.label :Retype_Password %>
     <%= f.password_field :password_confirmation %>
     <%= f.submit 'Sign up' %>
 <% end %>
