--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://media1.giphy.com/media/RdK6iHSfw1FV7d9q7Y/giphy.gif");
+    background-image: url("https://i.pinimg.com/originals/65/3a/91/653a912fceab7eb5de03b0a7b7135b4e.gif");
     background-repeat: no-repeat;
     background-size: cover;
 }
