--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -13,7 +13,7 @@
     <%= f.email_field :email %>
     <%= f.label :password %>
     <%= f.password_field :password %>
-    <%= f.label :Retype_Password %>
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation %>
     <%= f.submit 'Sign up' %>
 <% end %>
