--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,27 @@
   </head>
 
   <body>
-    <nav>
-      <%= link_to 'Home', root_path %> 
-      <%= link_to "Library", new_library_path %>
+    <div class="container">
+      <nav>
+        <%= link_to 'Home', root_path %>
+        <%= link_to 'Libraries', new_library_path %>
+        <%= link_to 'Books', books_url %>
+       
+        <% if @current_user.present? %>
+          <% if @current_user.admin? %> 
+            <%= link_to "All users", users_path %> 
+          <% end %>
 
-      <% if @current_user.present? %>
-     <% if @current_user.admin? %> 
-     <%= link_to "All users", users_path %> 
-      <%= link_to "Sign out #{ @current_user.email? }", login_path, :method => 'delete' %>
- <% end %>
-          <%= link_to 'Sign in', login_path %>
+          <%= link_to "Sign out #{ @current_user.email }", login_path, :method => 'delete' %>
+      <% else %>
           <%= link_to 'Sign up', new_user_path %>
+          <%= link_to 'Sign in', login_path %>
       <% end %>
-
+      
     </nav>
     <%= yield %>
+    </div>
   </body>
 </html>
+
+ <!-- <%= link_to "Library", new_library_path %> -->
