--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,3 +3,28 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+h2 {
+    text-align: center;
+}
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.thumb {
+    height: 10em;
+}
+
+.feature {
+    max-height: 30ems;
+}
+
+label {
+    display: block;
+}
+
+nav {
+    margin: 0 auto;
+    text-align: center;
+}
