--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -13,8 +15,12 @@
     <div class="container">
       <nav>
         <%= link_to 'Home', root_path %>
-        <%= link_to 'Libraries', new_library_path %>
-        <%= link_to 'Books', books_url %>
+
+         <%= link_to 'Authors', authors_path %> 
+        <%= link_to 'New Author', new_author_path %> 
+        <%= link_to 'Works', works_path %>
+        <%= link_to 'New Work', new_work_path %> 
+
        
         <% if @current_user.present? %>
           <% if @current_user.admin? %> 
@@ -33,4 +39,3 @@
   </body>
 </html>
 
- <!-- <%= link_to "Library", new_library_path %> -->
