--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>SECRET PAGE: ALL USER EMAIL ADDRESSES</h1>
+<h1>Ssssshhhhh: All Active Users</h1>
 
 <% @users.each do |user| %>
     <p><%= user.email %></p>
