--- a/app/views/works/edit.html.erb
+++ b/app/views/works/edit.html.erb
@@ -1,8 +1,8 @@
 <h1>Edit Work</h1>
 
-<!-- <%= render :partial => 'form' %> -->
+<%= render :partial => 'form' %> 
 
-<%= form_for :work do |f| %>
+<!-- <%= form_for :work do |f| %>
 
     <%= f.label :title %>
     <%= f.text_field :title %>
@@ -13,4 +13,4 @@
     <%= f.select :author_id, Author.pluck(:name, :id), :include_blank => true %>
 
     <%= f.submit %>
-<% end %>
+<% end %> -->
