--- a/app/views/works/info.html.erb
+++ b/app/views/works/info.html.erb
@@ -3,3 +3,4 @@
 <img src="<%= @cover %>" alt="Cover of <%= @title %>">
 
 <button><%= link_to "Back", :back%></button>
+<!-- for google books api -->
