--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form_for :author do |f| %>
+<%= form_for @author do |f| %>
 
     <%= f.label :name %>
     <%= f.text_field :name %>
     <%= f.label :image %>
-    <%= f.url_field :image %>
+    <%= f.url_field :image, :required => true %>
 
     <%= f.submit %>
 <% end %>
