--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,24 +5,25 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-    <div class="container">
-      <nav>
+    <nav>
+      <div class="leftnav">
+      <a>
         <%= link_to 'Home', root_path %>
-
-         <%= link_to 'Authors', authors_path %> 
+        <%= link_to 'Authors', authors_path %> 
         <%= link_to 'New Author', new_author_path %> 
         <%= link_to 'Works', works_path %>
-      
+        <%= link_to 'New Work', new_work_path %> 
+    </div>
 
 <!-- If the current user is an admin, the All users will appear in the nav bar and they will be able to see all users currently signed up to the app -->
-        <% if @current_user.present? %>
+      <div class="topnav">
+          <% if @current_user.present? %>
           <% if @current_user.admin? %> 
             <%= link_to "All users", users_path %> 
           <% end %>
@@ -32,10 +33,11 @@
           <%= link_to 'Sign up', new_user_path %>
           <%= link_to 'Sign in', login_path %>
       <% end %>
-      
-    </nav>
+      </div>
     <%= yield %>
     </div>
+    </nav>
+    </a>
   </body>
 </html>
 
