--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,22 +1,27 @@
+
 <h1><%= @work.title %></h1>
 
 <%= image_tag @work.image, :class => 'feature' if @work.image.present? %>
  
-
 <ul>
     <li>Title: <%= @work.title %></li>
-        <% if @work.author.present? %>
+
+        <% if @work.authors.present? %>
     <li>Author: <%= link_to @work.author.name, @work.author %></li>
         <% end %>
 </ul> 
 
+<!-- 
 <% @work.authors.each do |author| %>
-    <%= link_to image_tag @work.image, :class => 'thumb' if @work.image.present? %>
+    <%= link_to image_tag @work.image, :class => 'thumb' %>
     <% end %>
-
+-->
 <div class="controls">
     <%= link_to 'Edit work', edit_work_path(@work) %>
     <%= link_to 'Delete work', @work, :method => 'delete', :data => { :confirm => 'Are you sure?' } %> 
 <button><%= link_to "Back", :back%></button>
+
+
+
 
    
